# LU_Paralelo2

./: CMakeLists.txt  parallelLU.cpp
